# CMakeList.txt : CMake project for Hello-cpp, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Hello-cpp")

# Add source to this project's executable.
add_executable (Hello-cpp "Hello-cpp.cpp" "Hello-cpp.h")

# TODO: Add tests and install targets if needed.
